// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot renders 1`] = `
<div>
  <h3
    className="user-title"
  >
    Users
  </h3>
  <table
    className="user-table"
  >
    <tbody
      className="user-table-body"
    >
      <tr
        className="user-columns"
      >
        <td>
          Username
        </td>
        <td>
          First Name
        </td>
        <td>
          Last Name
        </td>
        <td>
          Password
        </td>
        <td />
      </tr>
      <tr
        className="user-inputs"
      >
        <td>
          <input
            className="user-input-username"
            onChange={[Function]}
            placeholder="Username"
            type="text"
            value=""
          />
        </td>
        <td>
          <input
            className="user-input-firstname"
            onChange={[Function]}
            placeholder="First Name"
            type="text"
            value=""
          />
        </td>
        <td>
          <input
            className="user-input-lastname"
            onChange={[Function]}
            placeholder="Last Name"
            type="text"
            value=""
          />
        </td>
        <td>
          <input
            className="user-input-password"
            onChange={[Function]}
            placeholder="Password"
            type="text"
          />
        </td>
        <td
          className="user-input-buttons"
        >
          <button
            className="user-add-button"
            onClick={[Function]}
          >
            Add
          </button>
          <button
            className="user-update-button"
            onClick={[Function]}
          >
            Update
          </button>
        </td>
      </tr>
      <tr
        className="user-details"
      >
        <td
          onClick={[Function]}
        >
          orchy
        </td>
        <td
          onClick={[Function]}
        >
          David
        </td>
        <td
          onClick={[Function]}
        >
          Smithu
        </td>
        <td
          onClick={[Function]}
        />
        <td
          className="user-buttons"
        >
          <button
            className="user-delete-button"
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            className="user-edit-button"
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
      </tr>
      <tr
        className="user-details"
      >
        <td
          onClick={[Function]}
        >
          kelvin
        </td>
        <td
          onClick={[Function]}
        >
          kelvin
        </td>
        <td
          onClick={[Function]}
        >
          deleon
        </td>
        <td
          onClick={[Function]}
        />
        <td
          className="user-buttons"
        >
          <button
            className="user-delete-button"
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            className="user-edit-button"
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
      </tr>
      <tr
        className="user-details"
      >
        <td
          onClick={[Function]}
        >
          jonah
        </td>
        <td
          onClick={[Function]}
        >
          Jonah
        </td>
        <td
          onClick={[Function]}
        >
          MIn
        </td>
        <td
          onClick={[Function]}
        />
        <td
          className="user-buttons"
        >
          <button
            className="user-delete-button"
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            className="user-edit-button"
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Users component updates when there is user data 1`] = `
<div>
  <h3
    className="user-title"
  >
    Users
  </h3>
  <table
    className="user-table"
  >
    <tbody
      className="user-table-body"
    >
      <tr
        className="user-columns"
      >
        <td>
          Username
        </td>
        <td>
          First Name
        </td>
        <td>
          Last Name
        </td>
        <td>
          Password
        </td>
        <td />
      </tr>
      <tr
        className="user-inputs"
      >
        <td>
          <input
            className="user-input-username"
            onChange={[Function]}
            placeholder="Username"
            type="text"
            value="spoonily"
          />
        </td>
        <td>
          <input
            className="user-input-firstname"
            onChange={[Function]}
            placeholder="First Name"
            type="text"
            value="Jonah"
          />
        </td>
        <td>
          <input
            className="user-input-lastname"
            onChange={[Function]}
            placeholder="Last Name"
            type="text"
            value="Min"
          />
        </td>
        <td>
          <input
            className="user-input-password"
            onChange={[Function]}
            placeholder="Password"
            type="text"
          />
        </td>
        <td
          className="user-input-buttons"
        >
          <button
            className="user-add-button"
            onClick={[Function]}
          >
            Add
          </button>
          <button
            className="user-update-button"
            onClick={[Function]}
          >
            Update
          </button>
        </td>
      </tr>
      <tr
        className="user-details"
      >
        <td
          onClick={[Function]}
        >
          orchy
        </td>
        <td
          onClick={[Function]}
        >
          David
        </td>
        <td
          onClick={[Function]}
        >
          Smithu
        </td>
        <td
          onClick={[Function]}
        />
        <td
          className="user-buttons"
        >
          <button
            className="user-delete-button"
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            className="user-edit-button"
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
      </tr>
      <tr
        className="user-details"
      >
        <td
          onClick={[Function]}
        >
          kelvin
        </td>
        <td
          onClick={[Function]}
        >
          kelvin
        </td>
        <td
          onClick={[Function]}
        >
          deleon
        </td>
        <td
          onClick={[Function]}
        />
        <td
          className="user-buttons"
        >
          <button
            className="user-delete-button"
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            className="user-edit-button"
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
      </tr>
      <tr
        className="user-details"
      >
        <td
          onClick={[Function]}
        >
          jonah
        </td>
        <td
          onClick={[Function]}
        >
          Jonah
        </td>
        <td
          onClick={[Function]}
        >
          MIn
        </td>
        <td
          onClick={[Function]}
        />
        <td
          className="user-buttons"
        >
          <button
            className="user-delete-button"
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            className="user-edit-button"
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
